fixing alignment

--- a/projects/rockGarden/index.css
+++ b/projects/rockGarden/index.css
@@ -73,10 +73,10 @@ body{
 .museum{
 	height: 100vh;
 	display: flex;
+	min-width: 100vw;
 	flex-direction: column;
 	justify-content: space-between;
 	padding-bottom: 20px;
-	padding-right: 50px;
 }
 
 .museum .sort{
@@ -108,15 +108,19 @@ button, input[type="submit"], input[type="reset"] {
 .row1{
 	display: flex;
 	flex-direction: row nowrap;
+	justify-content: center;
 	align-items: flex-end;
 	height: 45vh;
+	padding-right: 50px;
 }
 
 .row2{
 	display: flex;
 	flex-direction: row nowrap;
+	justify-content: center;
 	align-items: flex-start;
 	height: 45vh;
+	padding-right: 50px;
 }
 
 .image{
